# crypto-ai-dashboard

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml  run_backend.ps1  run_frontend.ps1
backend/: .env.example  generate_keys.py  requirements.txt  test_config.py
backend/app/: database.py  main.py  security.py  seed_db.py
backend/app/api/: dependencies.py
backend/app/core/: config.py  cors.py  security.py
backend/app/db/: database.py
backend/app/models/: models.py
backend/app/schemas/: __init__.py  user.py  vote.py
backend/app/services/: __init__.py  auth_service.py  dashboard_service.py  user_mapper.py  user_service.py  vote_service.py
backend/tests/: conftest.py  test_api_routes.py  test_auth_service.py  test_dependencies.py  test_integrations.py  test_user_service.py  test_vote_service.py
docs/: HR_PROJECT_SUMMARY.md  README.md  design-system-improvements.md  frontend-roadmap.md  milestone-1-progress-log.md  motion-audit.md  motion-roadmap.md  motion-task-backlog.md  progress-log.md  task-backlog.md  ui-audit-report.md
docs/audit-screenshots/: a11y-login-snapshot.md
docs/audit-screenshots/post-fix/: a11y-dashboard-snapshot.md  a11y-login-snapshot.md
frontend/: DESIGN_SPEC.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
frontend/design-spec-screenshots/: 01-desktop-collapsed-snapshot.md  08-mobile-collapsed-snapshot.md
frontend/src/: App.jsx  index.css
frontend/src/api/: auth.js  (+3 more)
scripts/: capture-audit-screenshots.mjs  capture-readme-screenshots.mjs  validate-mcp-servers.mjs
(+131 files in other folders)
