[project]
name = "crypto-ai-dashboard"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.136.3",
    "httpx>=0.28.1",
    "motor>=3.7.1",
    "myapplication>=0.1.0",
    "passlib>=1.7.4",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "pyjwt>=2.13.0",
    "pymongo>=4.17.0",
    "pytest>=9.0.3",
    "python-dotenv>=1.2.2",
    "slowapi>=0.1.9",
]
